extract GTM to its own folder and separate the dataLayer view

--- a/app/views/google_tag_manager/_base.html.erb
+++ b/app/views/google_tag_manager/_base.html.erb
@@ -2,7 +2,7 @@
 <%# - GTM JS must be inserted after the <body> tag %>
 <%# - dataLayer must be declared above tag manager JS import %>
 
-<script>window.dataLayer = window.dataLayer || [];</script>
+<%= render 'google_tag_manager/data_layer' %>
 
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-KV54GB"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
