--- a/app/views/layouts/redesign/checkout.html.slim
+++ b/app/views/layouts/redesign/checkout.html.slim
@@ -13,7 +13,7 @@ doctype html
     = render 'layouts/redesign/head'
 
   body#top
-    = render 'layouts/redesign/google_tag_manager'
+    = render 'google_tag_manager/base'
 
     = yield
 
