--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -1,6 +1,7 @@
 .products-collections {
 	padding-top: 40px;
 
+
 	.select2-container--default {
 		width: 100% !important;
 	}
@@ -22,21 +23,26 @@
 	}
 
 	.select2-container--default .select2-selection--single {
-		background-color:#eeddf0;
-		border: 1px solid #ebe3ed;
-		padding-left: 0.6rem
+		/* background-color: #eeddf0 ; */
+	   border: 1px solid #666666 ;
+	   border-radius: 2px !important;
+	   padding-left: 0.6rem;
 	}
 
 	.select2-container--default .select2-selection--single .select2-selection__arrow b {
-		border-color: #fff transparent transparent transparent;
-		border-width: 10px 8px 0 8px;
-		left: -5px;
-		margin-top: 0.4rem;
+	   border-color: #333333  transparent transparent transparent;
+	   border-width: 10px 8px 0 8px;
+	   left: -5px;
+	   margin-top: 0.4rem;
 	}
 
 	.select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b{
-		border-color: transparent transparent #fff transparent;
-		border-width: 0 8px 10px 8px;
+	   border-color: #333333  transparent transparent transparent;
+	   border-width: 10px 8px 0 8px;
+	   left: -5px;
+	   margin-top: 0.4rem;
+       -webkit-transform: rotate(180deg);
+       transform: rotate(180deg);
 	}
 
 	#select2-product_order-container{
@@ -106,11 +112,12 @@
 	    float: left;
 	    margin-right: 10px;
 	    cursor: pointer;
+	    box-shadow: inset 0px 1px 2px 0px #969696;
 	}
 	.thumb-true{
 		background-color: black;
-		background-image: url(product-collections/check.png);
-		background-size: contain;
+		background-image: url(product-collections/tick.svg);
+		background-size: cover;
 	}
 	.thumb-false{
 		background-color: #E0E0E0;
@@ -153,6 +160,13 @@
 	}
 
 	.show-more-styles{
+		@media(min-width: 992px){
+			padding-left:10px;
+			padding-right:10px;
+			width: 110%;
+		}
+		padding-top:10px;
+		padding-bottom:10px;
 		text-align: center;
     	background-color: #E8E8E8;
     	cursor: pointer;
@@ -192,10 +206,14 @@
 		}
 
 		.filter-rect {
+			@media(min-width: 992px){
+				padding:10px;
+				width: 110%;
+			}
 			background-color: #E8E8E8;
 			margin-bottom: 15px;
 			.filter-text{
-				margin-left:25px;
+				margin-left:10px;
 			}
 			.clear-all{
 				float:right;
@@ -205,6 +223,14 @@
 			i {
 				padding-left: 10px;
 			}
+		}
+
+		.filter-option span{
+			font-weight: normal;
+			font-family: "brandon-grotesque", sans-serif;
+			text-transform: lowercase;
+			font-size: 14px;
+			color: #777777;
 		}
 
 	}
