--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -687,7 +687,7 @@ li#cart-trigger {
     }
   }
   nav{
-    height:1000px;
+    height:1500px;
     ul{
       width:100%;
       li{
@@ -812,8 +812,8 @@ li#cart-trigger {
 
   }
 
-  #inner-main-menu .normal-item:last-child{
-    border: none;
+  .no-border{
+    border: none !important;
   }
   .normal-item{
     font-size: 10pt;
@@ -971,6 +971,10 @@ li#cart-trigger {
     }
   }
 
+  .text-back{
+    width: 75% !important;
+  }
+
   #new-this-week-menu{
     position: absolute;
     z-index: 10;
@@ -1012,8 +1016,9 @@ li#cart-trigger {
       margin-left: 5px;
       margin-top: -15px;
     }
+
     .text{
-      width: 75%;
+      width: 95%;
     }
 
     .images-content{
@@ -1073,7 +1078,7 @@ li#cart-trigger {
       margin-left: 775px;
     }
     .text{
-      width: 75%;
+      width: 95%;
     }
     .normal-item:first-child{
       padding-top: 10px;
