--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -135,7 +135,7 @@ ruby:
           ul.nav.navbar-nav
             li.normal-item
               div
-                .text NEW THIS WEEK
+                .text.text-back NEW THIS WEEK
                 .arrow
                   i.fa.fa-chevron-left
                   .back BACK
@@ -151,7 +151,7 @@ ruby:
           ul.nav.navbar-nav
             li.normal-item
               div
-                .text DRESSES
+                .text.text-back DRESSES
                 .arrow
                   i.fa.fa-chevron-left
                   .back BACK
@@ -160,14 +160,15 @@ ruby:
                 .text SHOP BY
             li.normal-item
               div
-                .text View all dresses
+                a href='/dresses'
+                  .text View all dresses
             li.normal-item
               div
                 .text What's new
             li.normal-item
               div
                 .text Made in 48 hours
-            li.normal-item
+            li.normal-item.no-border
               div
                 .text Instagram
             li.grey-item
@@ -175,43 +176,70 @@ ruby:
                 .text EVENTS
             li.normal-item
               div
-                .text Formal
+                = link_to 'Formal', build_taxon_path('Formal'), class: 'text'
             li.normal-item
               div
-                .text Wedding
+                = link_to 'Wedding', build_taxon_path('Wedding'), class: 'text'
             li.normal-item
               div
-                .text Birthday
+                = link_to 'Birthday', build_taxon_path('Birthday'), class: 'text'
             li.normal-item
               div
-                .text Special event
+                = link_to 'Special Event', build_taxon_path('Special Event'), class: 'text'
             li.normal-item
               div
-                .text Ball gowns
+                = link_to 'Ball Gowns', build_taxon_path('Ball Gowns'), class: 'text'
             li.normal-item
               div
-                .text Bridesmaid
+                = link_to 'Bridsmaid', bridesmaid_collection_path, class: 'text'
             li.normal-item
               div
-                .text Graduation
+                = link_to 'Graduation', build_taxon_path('Graduation'), class: 'text'
             li.normal-item
               div
-                .text Prom
+                = link_to 'Prom', build_taxon_path('Prom'), class: 'text'
             li.normal-item
               div
-                .text Homecoming
+                = link_to 'Homecoming', build_taxon_path('Homecoming'), class: 'text'
             li.normal-item
               div
-                .text Sweet 16
+                = link_to 'Sweet 16', build_taxon_path('Sweet 16'), class: 'text'
+            li.normal-item.no-border
+              div
+                = link_to 'Debutante', build_taxon_path('Debutante'), class: 'text'
+            li.grey-item
+              div
+                .text STYLES
             li.normal-item
               div
-                .text Debutance
+                = link_to 'Plus Size', build_taxon_path('Plus Size'), class: 'text'
+            li.normal-item
+              div
+                = link_to 'Two-Piece', build_taxon_path('Tow Piece'), class: 'text'
+            li.normal-item
+              div
+                = link_to 'One Shoulder', build_taxon_path('One-Shoulder'), class: 'text'
+            li.normal-item
+              div
+                = link_to 'Strapless', build_taxon_path('Strapless'), class: 'text'
+            li.normal-item
+              div
+                = link_to 'V-Neck', build_taxon_path('V-Neck'), class: 'text'
+            li.normal-item
+              div
+                = link_to 'Split', build_taxon_path('Split'), class: 'text'
+            li.normal-item
+              div
+                = link_to 'Backless', build_taxon_path('Backless'), class: 'text'
+            li.normal-item.no-border
+              div
+                = link_to 'Lace', build_taxon_path('Lace'), class: 'text'
 
         div#lookbook-menu
           ul.nav.navbar-nav
             li.normal-item
               div
-                .text LOOKBOOK
+                .text.text-back LOOKBOOK
                 .arrow
                   i.fa.fa-chevron-left
                   .back BACK
@@ -220,7 +248,7 @@ ruby:
           ul.nav.navbar-nav
             li.normal-item
               div
-                .text MAGAZINE
+                .text.text-back MAGAZINE
                 .arrow
                   i.fa.fa-chevron-left
                   .back BACK
@@ -281,7 +309,7 @@ ruby:
           li.normal-item
             div
               .text ACCOUNT LOGIN
-          li.normal-item
+          li.normal-item.no-border
             div
               .text REGISTER NOW
           /li
