--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -167,7 +167,7 @@ ruby:
                 .text What's new
             li.normal-item
               div
-                .text Made in 48 hours
+                = link_to 'Made in 48 hours', fast_making_dresses_path, class: 'text'
             li.normal-item.no-border
               div
                 .text Instagram
@@ -308,10 +308,10 @@ ruby:
               .text JOIN US
           li.normal-item
             div
-              .text ACCOUNT LOGIN
+              = link_to 'ACCOUNT LOGIN', '/profile', class: 'text'
           li.normal-item.no-border
             div
-              .text REGISTER NOW
+              = link_to 'REGISTER NOW', '/signup?cl=login-form', class: 'text'
           /li
             /a
               /| EVENTS
