--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -243,6 +243,12 @@ ruby:
                 .arrow
                   i.fa.fa-chevron-left
                   .back BACK
+            li.images-content
+              .row
+                = image_tag 'mobile-sidebar/lookbook/1.png'
+                = image_tag 'mobile-sidebar/lookbook/2.png'
+              .row
+                = image_tag 'mobile-sidebar/lookbook/3.png'
 
         div#magazine-menu
           ul.nav.navbar-nav
