--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -323,6 +323,7 @@ li.shop {
       position: absolute;
     }
     .shopping-bag{
+      cursor: pointer;
       margin-left: 23px;
       width: 24px;
       margin-top: 4px;
@@ -1140,11 +1141,15 @@ li#cart-trigger {
       margin-right: 20px;
     }
     .shopping-bag{
+      cursor: pointer;
       width: 17px;
       margin-top: -4px;
     }
   }
-
+  .register-area, .my-account{
+    text-decoration: none;
+    color: black;
+  }
   #home-menu{
     border-color: #d7d7d7;
     border-width: 1px;
