--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -26,7 +26,8 @@ ruby:
 .row.hidden-xs.hidden-sm
   .col-md-4.col-md-offset-4
     center
-      = image_tag 'logo/new-logo.svg'
+      a href='/'
+        = image_tag 'logo/new-logo.svg'
 
 .row#home-menu.hidden-xs.hidden-sm.text-center
   span.new-this-week NEW THIS WEEK
