--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -18,8 +18,9 @@ ruby:
   = render 'layouts/redesign/header/locale_selector/desktop'
 
   .col-md-8.heart-and-suitcase
-    span.num#moodboard-counter 0
-    i.fa.fa-heart
+    a href='/wishlist'
+      span.num#moodboard-counter 0
+      i.fa.fa-heart
     span.pipe |
     span.num#cart-item-count 0
     = image_tag 'homepage/shopping_bag.png', class: 'shopping-bag' , id:"cart-trigger"
