--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -122,15 +122,16 @@ ruby:
               - ids = [615,616,617,618]
               - for id in ids do
                 - product = Spree::Product.find(id)
-                .col-xxs-6.col-xs-6.category--item
-                  = link_to collection_product_path(product) do
-                    = cropped_product_hoverable_image_tag(product)
-                  .details.text-center
-                    span.name = product.name
-                    span.price = price_for_product(product)
+                - if product.present?
+                  .col-xxs-6.col-xs-6.category--item
+                    = link_to collection_product_path(product) do
+                      = cropped_product_hoverable_image_tag(product)
+                    .details.text-center
+                      span.name = product.name
+                      span.price = price_for_product(product)
 
-                  - if product.fast_delivery?
-                   = image_tag src='express_delivery.png', class: 'express-delivery'
+                    - if product.fast_delivery?
+                     = image_tag src='express_delivery.png', class: 'express-delivery'
 
         div#dresses-menu
           ul.nav.navbar-nav
