--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -28,7 +28,7 @@ ruby:
   .col-md-4.col-md-offset-4
     center
       a href='/'
-        = image_tag 'logo/new-logo.svg'
+        = image_tag 'logo/new-logo.svg', class: 'logo'
 
 .row#home-menu.hidden-xs.hidden-sm.text-center
   span.new-this-week NEW THIS WEEK
@@ -131,6 +131,7 @@ ruby:
 
 coffee:
   $("#search").on('click' , ->
+    $("#search-area").css("left",$(document).width()/2)
     $("#search-area").css("display","block")
   )
 
