--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -1247,7 +1247,7 @@ li#cart-trigger {
       padding-top: 25px;
       font-size: 8pt;
     }
-    .slide{
+    .slideArea{
       img{
         margin-top: 50px;
         width: 15%;
