--- a/app/views/robots/production.text.erb
+++ b/app/views/robots/production.text.erb
@@ -16,4 +16,5 @@ Disallow: /user_registrations
 Disallow: /users
 Disallow: /account
 
-Sitemap: <%= configatron.sitemap_url %>
+Sitemap: http://fameandpartners.com/sitemap.xml
+Sitemap: http://fameandpartners.com/au/sitemap.xml
