--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -44,21 +44,23 @@ ruby:
       = image_tag "_icons/search.svg", class: "nav-mobile-logo"
 
 .row.rect#rect-new-this-week
-  .black-bar SHOP ALL NEW THIS WEEK
+  .black-bar
+    .inner-text SHOP ALL NEW THIS WEEK
   .slideArea
-    ul.rslides
-      li
-        img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
-        img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
-        img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
-        img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
-        img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
-      li
-        img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
-        img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
-        img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
-        img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
-        img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
+    .containArea
+      ul.rslides
+        li
+          img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
+          img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
+          img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
+          img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
+          img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
+        li
+          img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
+          img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
+          img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
+          img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
+          img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
 
 .row.rect#rect-dresses
   .left-area
@@ -161,5 +163,5 @@ coffee:
 
     $('.slideArea .rslides').responsiveSlides({
       auto: false,
-      nav: true,
+      nav: true
     })
