--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -1222,6 +1222,7 @@ li#cart-trigger {
   }
 
   #rect-new-this-week{
+    background-color: transparent;
     @media(max-width: 1000px)
     {
       height:300px;
@@ -1240,15 +1241,28 @@ li#cart-trigger {
     }
     .black-bar{
       background-color: black;
-      height: 70px;
+      height: 20%;
       color: white;
       text-align: center;
       font-weight: 600;
-      padding-top: 25px;
       font-size: 8pt;
+      display: table;
+      width: 100%;
+      .inner-text{
+        cursor: pointer;
+        display: table-cell;
+        vertical-align: middle;
+      }
     }
     .slideArea{
-
+      background-color: white;
+      height: 80%;
+      display: table;
+      .containArea{
+        display: table-cell;
+        vertical-align: middle;
+        height: 100%;
+      }
       .rslides {
         position: relative;
         list-style: none;
@@ -1286,7 +1300,7 @@ li#cart-trigger {
         display: none;
       }
       .prev{
-        top: 50%;
+        top: 55%;
         position: absolute;
         background-image: url('icon-arrow-left.png');
         opacity: 1;
@@ -1296,7 +1310,7 @@ li#cart-trigger {
       }
       .next{
         right: 0;
-        top: 50%;
+        top: 55%;
         position: absolute;
         background-image: url('icon-arrow-right.png');
         opacity: 1;
@@ -1306,7 +1320,6 @@ li#cart-trigger {
       }
 
       img{
-        margin-top: 50px;
         width: 15%;
       }
       img:not(:first-child){
@@ -1398,7 +1411,7 @@ li#cart-trigger {
         font-weight: 600;
         height: 20%;
         display: table;
-        width: 101%;
+        width: 100.1%;
         .text{
           display: table-cell;
           vertical-align: middle
