fix Garrow comments

--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -4,9 +4,10 @@ ruby:
 #gray-top-banner.row.visible-md-block.visible-lg-block
 
   #customer-service.col-md-4
-    | 24/7 CUSTOMER SERVICE 1300 222 222
+    = banner.customer_service_contact
+
   #free-shipping.col-md-4.text-center
-    | FREE SHIPPING WITHIN AUSTRALIA AND NEW ZEALAND
+    = banner.free_shipping_in_AU_and_NZ
   #account-area.col-md-4.text-right
     a href='/signup?cl=login-form'
       span.register-area REGISTER NOW
