--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -51,18 +51,21 @@ ruby:
   .slideArea
     .containArea
       ul.rslides
-        li
-          img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
-          img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
-          img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
-          img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
-          img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
-        li
-          img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
-          img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
-          img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
-          img src="http://images.fameandpartners.com/spree/products/14165/large/4B320-BLACK-CROP.jpg?1438069638"
-          img src="http://images.fameandpartners.com/spree/products/13195/large/4B418-WATERCOLOUR-CROP.jpg"
+        - product1 = Spree::Product.where(id: 615).first
+        - product2 = Spree::Product.where(id: 616).first
+        - if product1.present? && product2.present?
+          li
+            = cropped_product_hoverable_image_tag(product1)
+            = cropped_product_hoverable_image_tag(product2)
+            = cropped_product_hoverable_image_tag(product1)
+            = cropped_product_hoverable_image_tag(product2)
+            = cropped_product_hoverable_image_tag(product1)
+          li
+            = cropped_product_hoverable_image_tag(product2)
+            = cropped_product_hoverable_image_tag(product1)
+            = cropped_product_hoverable_image_tag(product2)
+            = cropped_product_hoverable_image_tag(product1)
+            = cropped_product_hoverable_image_tag(product2)
 
 .row.rect#rect-dresses
   .left-area
